# github-ci-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-ci.yaml  test-ci.yaml
docker/: Dockerfile
src/: main.py  utils.py
tests/: test_main.py  test_utils.py
