[tool.poetry]
name = "github-ci-demo"
version = "0.1.0"
description = ""
authors = ["ray <wuhaohsiang1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
